--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ var txt;
   		case 1:
             
             $("#box").css("background-image","url(illu.jpg)");
-            txt = "「這個的業績獎勵……百貨公司贈券……拿去吧。」";
+            txt = "「「上次的事情辛苦了……這裡有些百貨公司贈券……拿去吧。」";
             break;
             
         case 2:
